# obsidian-journal-prepare

./: .gitignore  Cargo.toml  README.md
birthdays/: Cargo.toml
birthdays/src/: main.rs
mise/: README.md
mise/tasks/: coverage  lint  linter
preparer/: Cargo.toml
preparer/src/: events.rs  main.rs  options.rs  preparer.rs  utils.rs  vault.rs
preparer/src/events/: recurrence.rs
preparer/src/options/: day.rs
preparer/src/page/: content.rs
preparer/src/vault/: config.rs  preparer.rs
preparer/tests/: main.rs
src/: date_range.rs  date_utils.rs  events.rs  journal_name.rs  main.rs  metadata.rs  navigation.rs  options.rs  page.rs  utils.rs  vault.rs
src/events/: recurrence.rs
src/options/: day.rs  month.rs  week.rs  year.rs
src/page/: content.rs  property.rs
src/vault/: config.rs  preparer.rs
tests/: main.rs
utils/: Cargo.toml
utils/src/: content.rs  date.rs  events.rs  lib.rs  options.rs  page.rs
utils/src/content/: codeblock.rs
utils/src/events/: recurrence.rs
utils/src/options/: day.rs  month.rs  week.rs  year.rs
