[package]
name = "logseq-journal-prepare"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display", "from"] }
lazy_static = "1.5.0"
regex = "1.10.6"

[dev-dependencies]
assert_fs = "1.1.2"
indoc = "2.0.5"
