[package]
name = "logseq-journal-prepare"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
derive_more = { version = "1.0.0", features = ["display", "from"] }
env_logger = "0.11.5"
log = "0.4.22"
systemd-journal-logger = "2.2.0"

[dev-dependencies]
assert_fs = "1.1.2"
indoc = "2.0.5"
