[package]
name = "obsidian-journal-prepare"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["cargo"] }
clap-verbosity-flag = "2.2.2"
derive_more = { version = "1.0.0", features = ["display", "error", "from", "is_variant"] }
env_logger = "0.11.5"
log = "0.4.22"
saphyr = "0.0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.135"
serde_with = { version = "3.16.1", features = ["chrono"] }
systemd-journal-logger = "2.2.0"
toml = "0.8.19"

[dev-dependencies]
assert_fs = "1.1.2"
indoc = "2.0.5"
